--- a/assets/style.css
+++ b/assets/style.css
@@ -1,1 +1,50 @@
+body {
+    margin: 0;
+    padding: 0;
+    font-family: Arial, Helvetica, sans-serif;
+    background-color: #f2eefc;
+}
+
+.sidebar {
+    position: fixed;
+    left: 0;
+    top: 0;
+    width: 240px;
+    height: 100%;
+    background-color: #5c2ea1;
+    padding-top: 20px;
+    color: white;
+}
+
+.sidebar h2 {
+    text-align: center;
+}
+
+.sidebar ul {
+    list-style: none;
+    padding: 0;
+}
+
+.sidebar ul li a {
+    display: block;
+    padding: 10px 20px;
+    text-decoration: none;
+    color: #f6eaff;
+}
+
+.sidebar ul li a:hover {
+    background-color: #7b47c9;
+}
+
+.sidebar ul li a.active {
+    background-color: #b07bff;
+    font-weight: bold;
+}
+
+.content {
+    margin-left: 260px;
+    padding: 40px;
+    background-color: white;
+    min-height: 100vh;
+}
 
